<resources>
    <string name="app_name">ShopMelon</string>
    <string name="data_fetch_failed">Failed to fetch data :(</string>
    <string name="quit_confirm">Are you sure you want to quit?</string>
    <string name="search">Search</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="username">Username</string>
    <string name="quantity">Quantity</string>
    <string name="transaction_history">Transaction History</string>
    <string name="invoice_number">Invoice Number</string>
</resources>
