<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_margin="8dp"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/username"/>

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/quantity" />

        <TextView
            android:id="@+id/tv_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/model" />

        <TextView
            android:id="@+id/tv_invoiceNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/invoice_number" />
    </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
